--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "markdownMediaCard",
+	"name": "Markdown Media Card",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "You can insert media information cards in Markdown, such as books, music, movies, etc.",
+	"author": "Zhou Hua",
+	"authorUrl": "https://zhouhua.site",
 	"isDesktopOnly": false
 }
