change plugin id

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "markdownMediaCard",
+	"id": "markdown-media-card",
 	"name": "Markdown Media Card",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
