--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
 		"markdown"
 	],
 	"author": "Zhou Hua",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/zhouhua/obsidian-markdown-media-card"
+	},
+	"bugs": {
+		"url": "https://github.com/zhouhua/obsidian-markdown-media-card/issues"
+	},
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
