--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"typesafe-i18n": "typesafe-i18n"
 	},
 	"keywords": [
 		"obsidian",
@@ -33,6 +34,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"@zhouhua-dev/remark-media-card": "^1.1.5"
+		"@zhouhua-dev/remark-media-card": "^1.1.5",
+		"typesafe-i18n": "^5.26.2"
 	}
 }
